--- a/data/root.yaml
+++ b/data/root.yaml
@@ -1,4 +1,22 @@
 roots:
-  - name: Benjamin Brody
-    birth: 1883
-    spouse: {name: Bessie Katznelson, birth: 1886}
+  - name: Solomon Katznelson
+    birth: 1862
+    death: 1928
+    children:
+      - name: Goda Katznelson
+        birth: 1875
+        death: 1968
+        children: []
+      - name: Bessie Katznelson
+        birth: 1887
+        death: 1968
+        spouse: {name: Benjamin Brody, birth: 1883}
+        children: []
+      - name: Lena Sherman
+        nee: Lena Katznelson
+        birth: 1893
+        death: 1991
+        spouse: {name: Louis Sherman, birth: 1898, death:1976}
+        children: []
+      - name: Esther Katznelson
+        notes: "Married at 13, won't include children"
