Refactor render functions out

--- a/data/davis.yaml
+++ b/data/davis.yaml
@@ -15,7 +15,7 @@ roots:
             nee: Sharon Seloff
             birth: 1955
             spouse: {name: Gadi Gal, status: divorced}
-            notes: "figure out how to get Moises Paz, current spouse with kids
+            note: "figure out how to get Moises Paz, current spouse with kids
               David Paz - 1980
               Dani Levinson 1985
               Aliza Paz 1987
