--- a/data/root.yaml
+++ b/data/root.yaml
@@ -2,66 +2,16 @@ roots:
   - name: Solomon Katznelson
     birth: 1862
     death: 1928
+    collapse_children: false
     children:
       - name: Bessie Katznelson
         birth: 1887
         death: 1968
         spouse: {name: Benjamin Brody, birth: 1883}
-        children: []
       - name: Lena Sherman
         nee: Lena Katznelson
         birth: 1893
         death: 1991
         spouse: {name: Louis Sherman, birth: 1898, death: 1976}
-        children:
-          - name: Vernon Sherman
-            birth: 1923
-            death: 1994
-            spouse: {name: Rochelle Sherman, death: 1987}
-            note: "Figure out how to add Marshe and kid Jennifer"
-            children:
-              - name: Andy Sherman
-                birth: 1953
-                spouse: {name: Joanne Palmer, birth: 1954}
-                children:
-                  - name: Shira
-                    birth: 1980
-                    death: 2000
-                  - name: Miriam
-                    birth: 1983
-                    spouse: {name: David}
-              - name: Gary Sherman
-                birth: 1949
-                spouse: {name: Jean, birth: 1947, status: divorced}
-                children:
-                  - name: Isiah Sherman
-                    birth: 1981
-                    spouse: {name: Jen Miracle}
-                  - name: Matthew Sherman
-                    birth: 1983
-                    spouse: {name: Shona Ramchandani}
-          - name: Norton (Corky) Sherman
-            birth: 1928
-            death: 1963
-            spouse: {name: Beryl Sherman}
-            children:
-            - name: Sherry Sherman
-              birth: 1953
-              spouse: {name: Gary Cunial, birth: 1937}
-              children:
-                - name: Alyssa
-                  birth: 1986
-                  spouse: {name: Andrew Perew, birth: 1953}
-            - name: Sandy Sherman
-              birth: 1957
-              spouse: {name: Allison Noel, birth: 1937}
-            - name: Ricky Sherman
-              birth: 1957
-              death: 2005
-              spouse: {name: Diana}
-              children:
-                - {name: Ryan Sherman, birth: 1993}
-                - {name: Kelsey Sherman, birth: 1994}
-
       - name: Esther Katznelson
         note: "Married at 13, won't include children"
