--- a/data/rosenblum.yaml
+++ b/data/rosenblum.yaml
@@ -3,65 +3,77 @@ roots:
     nee: Evelyn Brody
     birth: 1914
     death: 1995
-    parent: bessie_katznelson_marries_benjamin_brody:s
-    spouse: {name: Leo Rosenblum, birth: 1906, death: 1985}
-    children:
-      - name: Benita Kaimowitz
-        nee: Benita Rosenblum
-        birth: 1935
-        note: "Figure out Gabe"
-        # spouse Gabe Kaimowitz
-        spouse: {name: Ed Vandenberg, birth: 1924, death: 2020}
+    parent: bessie_katznelson:primary:s
+    partnerships:
+      - spouse: {name: Leo Rosenblum, birth: 1906, death: 1985}
         children:
-          - name: David Kaimowitz
-            birth: 1958
-            spouse: {name: Francisca, birth: 1952, status: divorced}
-            children:
-              - name: Eliana Kaimowitz
-                birth: 1978
-                spouse: {name: Gabe Tames, birth: 1979}
+          - name: Benita Kaimowitz
+            nee: Benita Rosenblum
+            birth: 1935
+            note: "Figure out Gabe"
+            # spouse Gabe Kaimowitz
+            partnerships:
+              - spouse: {name: Ed Vandenberg, birth: 1924, death: 2020}
                 children:
-                  - {name: Emanuel Tames, birth: 2005}
-                  - {name: Eva Tames, birth: 2010}
-              - name: Tania Kaimowitz
-                birth: 1983
-          - name: Beth Kaimowitz
-            birth: 1961
-            spouse: {name: Mario de la Huerga, birth: 1959, status: divorced}
-            children:
-              - {name: Ruben de la Huerga, birth: 1993}
-              - {name: Raquel de la Huerga, birth: 1999}
-      - name: Carolyn Levine
-        nee: Carolyn Rosenblun
-        birth: 1939
-        spouse: {name: Larry Levine, birth: 1936}
-        children:
-          - name: Janet Levine
-            birth: 1963
-            death: 1996
-            children:
-             - {name: Sammy March, birth: 1990}
-             - {name: Marissa Koven, birth: 1993}
-             - {name: Tsipora March, birth: 1994}
-          - name: Mark
-            birth: 1966
-      - name: Bernie Rosenblum
-        birth: 1946
-        spouse: {name: Terry Katz, birth: 1947}
-        children:
-          - name: Jodie
-            birth: 1984
-            spouse: {name: Dylan Glynn}
-            children:
-              - {name: Louisa Elke Glynn, birth: 2018}
-      - name: Howard Rosenblum
-        birth: 1954
-        spouse: {name: Kathy Rosenblum, birth: 1952}
-        children:
-          - name: Tali Rosenblum
-            birth: 1987
-            spouse: {name: Josh Katz, birth: 1978}
-            children:
-              - {name: Kobi Katz, birth: 2020}
-              - {name: Charlie Katz, birth: 2021}
-          - {name: Noah Rosenblum, birth: 1990}
+                  - name: David Kaimowitz
+                    birth: 1958
+                    partnerships:
+                      - spouse: {name: Francisca, birth: 1952}
+                        status: divorced
+                        children:
+                          - name: Eliana Kaimowitz
+                            birth: 1978
+                            partnerships:
+                            - spouse: {name: Gabe Tames, birth: 1979}
+                              children:
+                                - {name: Emanuel Tames, birth: 2005}
+                                - {name: Eva Tames, birth: 2010}
+                          - name: Tania Kaimowitz
+                            birth: 1983
+                  - name: Beth Kaimowitz
+                    birth: 1961
+                    partnerships:
+                      - spouse: {name: Mario de la Huerga, birth: 1959}
+                        status: divorced
+                        children:
+                          - {name: Ruben de la Huerga, birth: 1993}
+                          - {name: Raquel de la Huerga, birth: 1999}
+          - name: Carolyn Levine
+            nee: Carolyn Rosenblun
+            birth: 1939
+            partnerships:
+              - spouse: {name: Larry Levine, birth: 1936}
+                children:
+                  - name: Janet Levine
+                    birth: 1963
+                    death: 1996
+                    partnerships:
+                     - children:
+                       - {name: Sammy March, birth: 1990}
+                       - {name: Marissa Koven, birth: 1993}
+                       - {name: Tsipora March, birth: 1994}
+                  - {name: Mark Levine, birth: 1966}
+          - name: Bernie Rosenblum
+            birth: 1946
+            partnerships:
+              - spouse: {name: Terry Katz, birth: 1947}
+                children:
+                  - name: Jodie
+                    birth: 1984
+                    partnerships:
+                      - spouse: {name: Dylan Glynn}
+                        children:
+                          - {name: Louisa Elke Glynn, birth: 2018}
+          - name: Howard Rosenblum
+            birth: 1954
+            partnerships:
+              - spouse: {name: Kathy Rosenblum, birth: 1952}
+                children:
+                  - name: Tali Rosenblum
+                    birth: 1987
+                    partnerships:
+                      - spouse: {name: Josh Katz, birth: 1978}
+                        children:
+                          - {name: Kobi Katz, birth: 2020}
+                          - {name: Charlie Katz, birth: 2021}
+                  - {name: Noah Rosenblum, birth: 1990}
