--- a/data/kagan.yaml
+++ b/data/kagan.yaml
@@ -1,33 +1,31 @@
 roots:
-  - name: Goda Katznelson
-    birth: 1875
-    death: 1968
-    parent: solomon_katznelson
-    children:
-      - name: Reva Kagan
-        birth: 1911
-        death: 2000
-        children:
-          - name: Nathan Kagan
-            birth: 1947
-            spouse: {name: Anna, birth: 1954}
-            children:
-              - name: Inna Kagan
-                birth: 1978
-                spouse: {name: Don Pankuch, birth: 1970}
-
-                children:
-                  - {name: Sasha Pankuch, birth: 2007}
-                  - {name: Ari Pankuch, birth: 2009}
-              - name: Isaac Kagan
-                birth: 1982
-                spouse: {name: Shari Barcebal, birth: 1985}
-
-                children:
-                  - {name: Abigail Kagan, birth: 2021}
-              - name: Rachel Kagan
-                birth: 1982
-                spouse: {name: Darren Morrisey, birth: 1990}
-
-                children:
-                  - {name: Riva Morrisey, birth: 2020}
+  - name: Reva Kagan
+    birth: 1911
+    death: 2000
+    parent: solomon_katznelson:primary:s
+    partnerships:
+      - children:
+        - name: Nathan Kagan
+          birth: 1947
+          partnerships:
+            - spouse: {name: Anna, birth: 1954}
+              children:
+                - name: Inna Kagan
+                  birth: 1978
+                  partnerships:
+                    - spouse: {name: Don Pankuch, birth: 1970}
+                      children:
+                        - {name: Sasha Pankuch, birth: 2007}
+                        - {name: Ari Pankuch, birth: 2009}
+                - name: Isaac Kagan
+                  birth: 1982
+                  partnerships:
+                    - spouse: {name: Shari Barcebal, birth: 1985}
+                      children:
+                        - {name: Abigail Kagan, birth: 2021}
+                - name: Rachel Kagan
+                  birth: 1982
+                  partnerships:
+                    - spouse: {name: Darren Morrisey, birth: 1990}
+                      children:
+                        - {name: Riva Morrisey, birth: 2020}
