--- a/data/eckers.yaml
+++ b/data/eckers.yaml
@@ -34,11 +34,17 @@ roots:
                           - {name: Orla Cole-Gorton, birth: 1999}
                           - {name: August Cole-Gorton, birth: 2004}
                       - spouse: {name: David Tockman, birth: 1968}
+                        # Dotted Line
                   - name: Dara Cole
                     birth: 1974
                     partnerships:
-                      - children:
+                      - spouse: { name: Horace Nelson}
+                        # Dotted line only
+                        children:
                           - {name: Xena Cole-Nelson, birth: 2007}
+                      - spouse: { name: James Deanes}
+                        # Dotted line only
+                        children:
                           - {name: Rumi Cole-Deanes, birth: 2015}
           - name: Suzanne Greenwald
             nee: Suzanne Eckers
@@ -55,7 +61,8 @@ roots:
                         children:
                           - {name: Bella Greenbacher, birth: 2002}
                           - {name: Annika Greenbacher, birth: 2007}
-                      - spouse: {name: David Kulp}
+                      - spouse: {name: David Kulp, birth: 1969}
+                        # Notes: dotted and kids to david
                         children:
                           - {name: Lily Kulp, birth: 2003}
                           - {name: Bean Kulp, birth: 2005}
